# maddpg-adversarial-experiments

./: .gitattributes  .gitignore  AGENT_HANDOFF.md  DEPLOYMENT_GUIDE.md  DOCKER_README.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  README_standalone.md  STRUCTURAL_ANALYSIS_SUCCESSFUL_PAPERS.md  THESIS_GUIDANCE.md  TRAFFIC_MATRIX_SUMMARY.md  agent_state.json  analyze_topology.py  analyze_traffic_matrix.py  check_progress.sh  check_progress_fgsm.sh  check_progress_full.sh  check_progress_maddpg.sh  check_progress_quick.sh  check_progress_sanity.sh  check_progress_training.sh  clean_outputs.sh  debug_training.sh  diagnose_gpu_server.sh  docker_setup.sh  experiment_config.json  experiment_config_remaining.json  load_weights.sh  pyproject.toml  requirements.txt  reset.sh  reset_results.sh  reward_fix_full_config.json  run_fgsm_eval.sh  run_full_experiment.sh  run_maddpg_eval.sh  run_phase.sh  run_sanity.sh  (+12 more)
paper/: paper1_revised.tex  paper2_fgsm.tex  paper2_robustness.tex  results.tex
src/: standalone_experiment_runner.py
src/attack_framework/: __init__.py  improved_fgsm_attack.py  learned_adversary.py
thesis/: learned_adversary_project.md  msc_fgsm_robustness_guide.md
tmp/: phase2_load_sweep_results.json  phase2_maddpg_results.json  phase2_rankings.json
tools/: analyze_fgsm.py  flow_count_scan.py  ospf_load_scan.py  phase2_diagnostics.py  plot_paper1.py  plot_results.py  plot_seed_variance.py  plot_thesis.py  plot_topology.py  plot_traffic_matrix.py  requirements_tools.txt  topo_invariants.py  train_adversary.py
(+7 files in other folders)
